--- a/FridgeMeal/app/src/main/res/layout/activity_login.xml
+++ b/FridgeMeal/app/src/main/res/layout/activity_login.xml
@@ -39,8 +39,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/etPassword"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="104dp"
         android:text="Login"
         tools:layout_editor_absoluteX="139dp"
         tools:layout_editor_absoluteY="431dp" />
@@ -54,4 +55,14 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="34dp"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+    <Button
+        android:id="@+id/btnSignUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/etPassword"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="103dp"
+        android:layout_marginTop="18dp"
+        android:text="@string/signupbutton" />
 </RelativeLayout>
