migrated main activity to home fragment,added fragment placeholders for profile and recipes

--- a/FridgeMeal/app/src/main/res/layout/activity_main.xml
+++ b/FridgeMeal/app/src/main/res/layout/activity_main.xml
@@ -8,39 +8,54 @@
     tools:context=".MainActivity">
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvHomeRecipes"
-        android:layout_width="398dp"
-        android:layout_height="586dp"
-        android:layout_above="@+id/btnAddIngredient"
-        android:layout_alignParentStart="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="7dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp" />
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/rvHomeRecipes"-->
+<!--        android:layout_width="398dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_above="@+id/btnAddIngredient"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginStart="7dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:layout_marginEnd="10dp"-->
+<!--        android:layout_marginBottom="10dp" />-->
 
-    <EditText
-        android:id="@+id/etIngredient"
-        android:layout_width="307dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="9dp"
-        android:layout_marginBottom="10dp"
-        android:ems="10"
-        android:hint="Ingredient"
-        android:inputType="textPersonName" />
+<!--    <EditText-->
+<!--        android:id="@+id/etIngredient"-->
+<!--        android:layout_width="307dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_above="@+id/bottom_navigation"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_marginStart="9dp"-->
+<!--        android:layout_marginBottom="10dp"-->
+<!--        android:ems="10"-->
+<!--        android:hint="Ingredient"-->
+<!--        android:inputType="textPersonName" />-->
 
-    <Button
-        android:id="@+id/btnAddIngredient"
-        android:layout_width="wrap_content"
+<!--    <Button-->
+<!--        android:id="@+id/btnAddIngredient"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_above="@+id/bottom_navigation"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_marginStart="4dp"-->
+<!--        android:layout_marginEnd="9dp"-->
+<!--        android:layout_marginBottom="10dp"-->
+<!--        android:layout_toEndOf="@+id/etIngredient"-->
+<!--        android:text="Add" />-->
+
+    <FrameLayout
+        android:id="@+id/flContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_navigation"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="10dp"
-        android:layout_toEndOf="@+id/etIngredient"
-        android:text="Add" />
+        app:menu="@menu/menu_bottom_navigation" />
 
 </RelativeLayout>
