--- a/FridgeMeal/app/src/main/res/layout/item_recipe.xml
+++ b/FridgeMeal/app/src/main/res/layout/item_recipe.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/ivRecipeImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="5dp"
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         android:layout_toEndOf="@+id/ivRecipeImage"
         android:text="Chicken Tikka Masala"
         android:textSize="18sp" />
@@ -32,23 +32,34 @@
         android:id="@+id/tvCookingTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_toEndOf="@+id/tvRecipeName"
+        android:layout_below="@+id/tvRecipeName"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_toEndOf="@+id/tvCalories"
         android:text="45 mins"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/tvDescription"
-        android:layout_width="291dp"
-        android:layout_height="65dp"
+        android:id="@+id/tvServings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/tvRecipeName"
-        android:layout_alignParentEnd="true"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginTop="15dp"
         android:layout_toEndOf="@+id/ivRecipeImage"
-        android:text="Authentic Chicken Tikka Masala is usually made with yogurt marinated chicken, skewered and chargrilled for incredible bbq flavours" />
+        android:text="5 Servings"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/tvCalories"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvRecipeName"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_toEndOf="@+id/tvServings"
+        android:text="900 Calories"
+        android:textSize="16sp" />
+
 </RelativeLayout>
