passed jsonarray of ingredients to recipedetail and displayed them

--- a/FridgeMeal/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/FridgeMeal/app/src/main/res/layout/activity_recipe_detail.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/ivRecipeImageDetail"
         android:layout_width="match_parent"
-        android:layout_height="217dp"
+        android:layout_height="190dp"
         android:layout_alignParentStart="false"
         android:layout_alignParentTop="false"
         android:layout_alignParentEnd="false"
@@ -27,7 +27,7 @@
         android:layout_below="@+id/ivRecipeImageDetail"
         android:layout_alignParentStart="true"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:text="Chicken"
         android:textSize="18sp"
         android:textStyle="bold" />
@@ -40,19 +40,12 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginBottom="10dp"
-        android:text="TextView" />
+        android:scrollbars="vertical"
+        android:text="TextView"
+        android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/tvCookingTimeDetail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/ivRecipeImageDetail"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="13dp"
-        android:layout_toEndOf="@+id/tvRecipeNameDetail"
-        android:text="55 mins" />
 </RelativeLayout>
