added pic to recipe detail and button to link to directions online

--- a/FridgeMeal/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/FridgeMeal/app/src/main/res/layout/activity_recipe_detail.xml
@@ -35,17 +35,27 @@
     <TextView
         android:id="@+id/tvRecipeDescriptionDetail"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="405dp"
+        android:layout_above="@+id/btnRecipeDirections"
         android:layout_below="@+id/tvRecipeNameDetail"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="5dp"
         android:scrollbars="vertical"
         android:text="TextView"
         android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/btnRecipeDirections"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="5dp"
+        android:text="View Directions" />
 
 </RelativeLayout>
