added  new colors to the layout. added a border around each item.

--- a/FridgeMeal/app/src/main/res/layout/activity_main.xml
+++ b/FridgeMeal/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/menu_bottom_navigation" />
+        app:menu="@menu/menu_bottom_navigation"
+        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"/>
 
 </RelativeLayout>
