--- a/FridgeMeal/app/src/main/res/layout/fragment_home.xml
+++ b/FridgeMeal/app/src/main/res/layout/fragment_home.xml
@@ -27,7 +27,9 @@
         android:layout_marginBottom="10dp"
         android:ems="10"
         android:hint="Ingredient"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"/>
+
 
     <Button
         android:id="@+id/btnAddIngredient"
