--- a/FridgeMeal/app/src/main/res/layout/item_recipe.xml
+++ b/FridgeMeal/app/src/main/res/layout/item_recipe.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/containerRecipe"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/rectangle"
+    android:layout_margin="10dp">
 
     <ImageView
         android:id="@+id/ivRecipeImage"
