--- a/FridgeMeal/app/src/main/res/values/colors.xml
+++ b/FridgeMeal/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Blanched_Almond">#FFEBCD</color>
+    <color name="Papaya_Whip">#FFEFD5</color>
+    <color name="Peach_Puff3">#CDAF95</color>
 </resources>
