added a new branch to work on the UI. Changed the recipe UI and the app theme colors. Changed the IV look.

--- a/FridgeMeal/app/src/main/res/values/themes.xml
+++ b/FridgeMeal/app/src/main/res/values/themes.xml
@@ -12,5 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+    </style>
+    <style name="test" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:windowBackground">@color/Blanched_Almond</item>
     </style>
 </resources>
