--- a/FridgeMeal/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/FridgeMeal/app/src/main/res/layout/activity_recipe_detail.xml
@@ -18,7 +18,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars"
+        />
 
     <TextView
         android:id="@+id/tvRecipeNameDetail"
