--- a/FridgeMeal/app/src/main/res/layout/item_recipe.xml
+++ b/FridgeMeal/app/src/main/res/layout/item_recipe.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/rectangle"
-    android:layout_margin="10dp">
+    android:layout_marginBottom="5dp"
+    android:layout_marginTop="5dp">
 
     <ImageView
         android:id="@+id/ivRecipeImage"
@@ -17,7 +18,9 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars"
+        android:background="@drawable/circle"
+        android:outlineProvider="background"/>
 
     <TextView
         android:id="@+id/tvRecipeName"
