--- a/FridgeMeal/app/src/main/res/layout/item_recipe.xml
+++ b/FridgeMeal/app/src/main/res/layout/item_recipe.xml
@@ -18,19 +18,23 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        tools:srcCompat="@tools:sample/avatars"
         android:background="@drawable/circle"
+        tools:srcCompat="@tools:sample/avatars"
         android:outlineProvider="background"/>
 
     <TextView
         android:id="@+id/tvRecipeName"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
+        android:layout_marginEnd="10dp"
         android:layout_toEndOf="@+id/ivRecipeImage"
-        android:text="Chicken Tikka Masala"
+        android:text="Chicken Tikka Masala lets go and giet it etrjl aok"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:textSize="18sp" />
 
     <TextView
@@ -38,10 +42,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvRecipeName"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
+        android:layout_marginEnd="10dp"
         android:layout_toEndOf="@+id/tvCalories"
         android:text="45 mins"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:textSize="16sp"
         android:textStyle="bold" />
 
