--- a/FridgeMeal/app/src/main/res/layout/item_feed.xml
+++ b/FridgeMeal/app/src/main/res/layout/item_feed.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/recipeImage"
+        android:id="@+id/userImage"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_alignParentStart="true"
@@ -18,32 +18,22 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/recipeName"
+        android:id="@+id/feedUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="7dp"
-        android:layout_toEndOf="@+id/recipeImage"
-        android:text="recipe name here" />
-
-    <TextView
-        android:id="@+id/recipeCreator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="7dp"
-        android:layout_toEndOf="@+id/recipeName"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="9dp"
+        android:layout_toEndOf="@+id/userImage"
         android:text="recipe creator" />
 
     <TextView
-        android:id="@+id/recipeDescript"
+        android:id="@+id/userStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/recipeCreator"
+        android:layout_below="@+id/feedUser"
         android:layout_marginStart="16dp"
         android:layout_marginTop="13dp"
-        android:layout_toEndOf="@+id/recipeImage"
+        android:layout_toEndOf="@+id/userImage"
         android:text="a basice recipe of sorts, details will vary, naturally" />
 </RelativeLayout>
